--- a/Quality/Quality/Views/SendMailAttachfiles/SendMailer.cshtml
+++ b/Quality/Quality/Views/SendMailAttachfiles/SendMailer.cshtml
@@ -86,6 +86,12 @@
                 Attachment
             </td>
             <td>
+                @for (int i = 0; i < Model.FileonServer.Count; i++)
+                {
+                    @Html.DisplayFor(model => Model.FileonServer[i])
+                    @Html.HiddenFor(model => Model.FileonServer[i])
+                    <br />
+                }
                 <input type="file" name="fileUploader" multiple="multiple" />
             </td>
         </tr>
