--- a/Quality/Quality/Areas/BulkFGT/Views/MockupCrocking/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/MockupCrocking/Index.cshtml
@@ -982,8 +982,7 @@
             });
         });
 
-        $('#SendMail').click(function () {
-            // Get PDF
+        $('#SendMail').on('click', function () {
             if ($('#ReportNo').val() == ""
                 || $('#Request_BrandID').val() == ""
                 || $('#Request_SeasonID').val() == ""
