ISP20210981 - Inspection 調整

--- a/Quality/Quality/Areas/BulkFGT/Views/BulkFGTMailGroup/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/BulkFGTMailGroup/Index.cshtml
@@ -450,9 +450,7 @@
                     });
                 }
                 else {
-                    msg.WithErrorCheck(data.ErrMsg, function () {
-                        location.reload();
-                    });
+                    msg.WithError(data.ErrMsg);
                 }
             }
         });
