--- a/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/HeatTest.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/HeatTest.cshtml
@@ -917,7 +917,7 @@
         if (parseFloat(value) >= 100) {
             return 100;
         }
-        else if (parseFloat(value) <= 0) {
+        else if (parseFloat(value) < 0) {
             return 0;
         }
 
