--- a/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/WashTest.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/WashTest.cshtml
@@ -1068,7 +1068,7 @@
         if (parseFloat(value) >= 100) {
             return 100;
         }
-        else if (parseFloat(value) <= 0) {
+        else if (parseFloat(value) < 0) {
             return 0;
         }
 
