--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/Moisture.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/Moisture.cshtml
@@ -91,7 +91,7 @@
                         </tr>
                         <tr>
                             <td style="text-align: right;"><label>Fabrication</label></td>
-                            <td>@Html.TextBoxFor(o => o.Fabrication, new { @disabled = "disabled" })</td>
+                            <td>@Html.TextBoxFor(o => o.Fabrication, new { @readonly = "readonly",@Style= "background-color: lightgray;" })</td>
                         </tr>
                     </table>
                 </div>
