ISP20211064 - MockupCrocking 調整

--- a/Quality/Quality/Views/PublicWondow/Pass1List.cshtml
+++ b/Quality/Quality/Views/PublicWondow/Pass1List.cshtml
@@ -62,6 +62,7 @@
                     <th>Name</th>
                     <th>ExtNo</th>
                     <th>Factory</th>
+                    <th>EMail</th>
                 </tr>
             </thead>
             <tbody>
@@ -73,6 +74,7 @@
                         <td>@item.Name</td>
                         <td>@item.ExtNo</td>
                         <td>@item.Factory</td>
+                        <td>@item.EMail</td>
                     </tr>
                 }
             </tbody>
@@ -101,6 +103,7 @@
                 ID: Pass1Data[0],
                 Name: Pass1Data[1],
                 ExtNo: Pass1Data[2],
+                EMail: Pass1Data[3],
             }
 
             // 呼叫父視窗的GetPass1 Function，把物件傳回去
